added navbar