@@ -4,12 +4,9 @@ import network.kinau.recipes.dto.RecipeDto;
 import network.kinau.recipes.services.RecipeService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/recipes")
@@ -20,11 +17,23 @@ public class RecipeController {
     @Autowired
     private RecipeService recipeService;
 
+
+    @GetMapping("/{id}")
+    public RecipeDto getRecipe(@PathVariable("id") long id) {
+        return modelMapper.map(recipeService.getRecipe(id), RecipeDto.class);
+    }
+
+
     @GetMapping()
     public List<RecipeDto> getAllRecipes() {
         return recipeService.getAllRecipes()
                 .stream()
                 .map(recipe -> modelMapper.map(recipe, RecipeDto.class))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @PostMapping()
+    public RecipeDto createRecipe(@RequestBody RecipeDto recipeDto) {
+        return modelMapper.map(recipeService.createRecipe(recipeDto), RecipeDto.class);
     }
 }
